--- a/emulator/public_html/CSS/styling.css
+++ b/emulator/public_html/CSS/styling.css
@@ -42,3 +42,14 @@ h1 {
     border-radius: 50px;
     border: 1px solid ;
 }
+#container{
+    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: white;
+    width: 400px;
+    height: 400px;
+}
+
