--- a/emulator/public_html/CSS/styling.css
+++ b/emulator/public_html/CSS/styling.css
@@ -6,50 +6,29 @@ This page is for styling the index page (html) for the Emulator
     Created on : Apr 28, 2015, 3:01:17 PM
     Author     : cnimcharoen
 */
-body {
-    background-color: #d0e4fe;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
 }
-
-h1 {
-    color: black;
-    text-align: center;
+body {
+    -webkit-transform: perspective(1400px) matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    -webkit-transform-style: preserve-3d;
+    background-color: transparent;
 }
 #emulatorCanvas {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    background-position-y: 20%;
-}
-#AppSelection{
-    font-size: 20px;
-}
-#smartphoneFrame{
-    text-align: center;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    width: 520px;
-    height: 520px;
-    background-color: black;
+    position: absolute;
+    width: 207px;
+    height: 210px;
+    -webkit-transform-style: preserve-3d;
+    left: 71px;
+    top: 200px;
+    background-color: white;
 }
 
-#homebutton{
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    border: 1px solid ;
+#title1 {
+    -webkit-transform: translate3d(22px, 1px, 0px);
+    -webkit-transform-style: preserve-3d;
 }
-#container{
-    text-align: center;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: white;
-    width: 400px;
-    height: 400px;
-}
+
 
